Added bibliography for an article mentioned in calc_fup_red documentation.

--- a/invitroTKstats/inst/REFERENCES.bib
+++ b/invitroTKstats/inst/REFERENCES.bib
@@ -85,3 +85,14 @@
   year={2008},
   publisher={Elsevier}
 }
+
+@article{berg2011pathology,
+  title={Pathology Harmony; a pragmatic and scientific approach to unfounded variation in the clinical laboratory},
+  author={Jonathan Berg and Vanessa Lane},
+  journal={Annals of Clinical Biochemistry},
+  volume={48},
+  number={3},
+  pages={195--197},
+  year={2011},
+  publisher={Sage Journals}
+}
