--- a/invitroTKstats/vignettes/AK-Clintdata-Apr2023.Rmd
+++ b/invitroTKstats/vignettes/AK-Clintdata-Apr2023.Rmd
@@ -386,13 +386,15 @@ subset(this.subset,Time==0)$Response/1*subset(this.subset,Time==0)$Dilution.Fact
 
 # maximum likelihood analysis:
 
-The package has been undergoing further development since the example dataset `kreutz2023.clint` was compiled. Some of the columns are named differently from how they were named in the previous version, or example, "Std.Conc" column is now called "Test.Compound.Conc". In addition, each dataset is required to have either a "Technical.Replicates" or a "Biological.Replicates" column. Updating column names and adding a pseudo column:
+The package has been undergoing further development since the example dataset `kreutz2023.clint` was compiled. Some of the columns are named differently from how they were named in the previous version, for example, "Std.Conc" column is now called "Test.Compound.Conc". In addition, each dataset is required to have either a "Technical.Replicates" or a "Biological.Replicates" column. Updating column names and adding a pseudo column:
 ```{r}
 level2$Technical.Replicates <- 1
 colnames(level2)[which(colnames(level2) == "Std.Conc")] <- "Test.Compound.Conc"
 ```
 
 ```{r MLE, eval=TRUE}
+## Use data.in to specify input level-2 data from R session instead of using FILENAME to read in external .tsv file. 
+## `output.res = FLASE` prevents the exporting of the level-3 result. 
 level3 <- calc_clint_point(data.in = level2, 
                            output.res = FALSE)
 ``` 
