--- a/invitroTKstats/vignettes/AK-UCdata-Apr2023.Rmd
+++ b/invitroTKstats/vignettes/AK-UCdata-Apr2023.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Kreutz 2023 GC PFAS Ultracentrifugation Data"
+title: "Kreutz 2023 UC Data"
 author: "John Wambaugh"
 date: "April 26, 2023"
 output: rmarkdown::html_vignette
