--- a/invitroTKstats/vignettes/MS-REDdata-Apr2023.Rmd
+++ b/invitroTKstats/vignettes/MS-REDdata-Apr2023.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Smeltz 2023 LC PFAS RED Data"
+title: "Smeltz 2023 RED Data"
 author: "John Wambaugh"
 date: "April 26, 2023"
 output: rmarkdown::html_vignette
