--- a/invitroTKstats/vignettes/Clint_vignette.Rmd
+++ b/invitroTKstats/vignettes/Clint_vignette.Rmd
@@ -12,48 +12,152 @@ knitr::opts_chunk$set(
   collapse = TRUE
 )
 ```
+
 ## Introduction 
 
-This vignette guides users on how to estimate intrinsic hepatic clearance (cl~int~) from mass spectrometry data. Intrinsic hepatic clearance is a chemical specific parameter that describes a liver's ability to metabolize an unbound compound. It is characterized by the disappearance of compound when incubated with primary hepatocytes (Breen et al. 2021). 
+This vignette guides users on how to estimate intrinsic hepatic clearance (Cl~int~) from mass spectrometry data. Intrinsic hepatic clearance is a chemical specific parameter that describes a liver's ability to metabolize an unbound compound. It is characterized by the disappearance of compound when incubated with primary hepatocytes (Breen et al. 2021). 
+
+The mass spectrometry data should be collected from an assay that uses cryopreserved hepatocyte suspension (Shibata et al. 2002) as seen in Figure 1. 
+
+```{r, echo = FALSE, out.width = "100%", fig.cap = "Fig 1: Cl~int~ experimental set up", fig.topcaption = TRUE, fig.align = "left"}
+knitr::include_graphics("Clint_diagram.png")
+```
 
 ### Suggested packages for use with this vignette 
+
 ```{r setup, message = FALSE}
 # Primary package 
 library(invitroTKstats)
 # Data manipulation and plotting packages 
 library(dplyr)
+library(htmlTable)
 library(kableExtra)
-
-# devtools::install_local("~/Git/invitrotkstats/invitroTKstats")
 ```
 
 ## Load Data
 
-First, we load in the example dataset from invitroTKstats. 
+First, we load in the example dataset from `invitroTKstats`. 
+
 ```{r Load example data}
 # Load example clint data 
 data("Clint-example")
 ```
 
-Three datasets are loaded in: `clint_L0`, `clint_L1`, and `clint_L2`. These datasets are cl~int~ data at Level 0, 1, and 2 respectively. For the purpose of this vignette, we'll start with `clint_L0`, displayed below, to demonstrate the complete pipelining process. Further, the `clint_L0` data has already been processed with the `merge_level0` function. For more details on curating raw data to Level 0 data, see "Creating dataguide from raw data vignette". 
-```{r, echo = FALSE}
-# Level 0 data 
-head(clint_L0, n = 3) %>% 
-  kable(caption = "Level 0 data") %>% 
-  scroll_box(width = "100%")
+Three datasets are loaded in: `clint_L0`, `clint_L1`, and `clint_L2`. These datasets are Cl~int~ data at Level 0, 1, and 2 respectively. For the purpose of this vignette, we'll start with `clint_L0`, the Level 0 data, to demonstrate the complete pipelining process. 
+
+`clint_L0` is the output from the `merge_level0` function which compiles raw lab data from specified Excel files into a singular data frame. The data frame contains exactly one row per sample with information obtained from the mass spectrometer. For more details on curating raw lab data to a singular Level 0 data frame, see "Creating dataguide from raw data vignette".
+
+The following table displays the first three rows of `clint_L0`, our Level 0 data.  
+
+```{r, echo = FALSE, warning = FALSE}
+DT::datatable(head(clint_L0, n = 3),
+              rownames = FALSE, 
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 1: Level 0 data'),
+              extensions = 'Scroller',
+              options = list(scrollX = TRUE,
+                             dom = "t" ) )
 ```
 
 ## Level 1 processing
 
-`format_clint` is the Level 1 function used to create a standardized data frame. The function ensures all required columns are provided and then standardizes the column names. 
+`format_clint` is the Level 1 function used to create a standardized data frame. This level of processing is necessary because naming conventions or formatting can differ across data sets. 
 
 If the Level 0 data already contains the required column, then the existing column name can be specified. For example, `clint_L0` already contains a column specifying the sample name called "Sample". However, the default column name for sample name is "Lab.Sample.Name". Therefore, we specify the correct column with `sample.col = "Sample"`. In general, to specify an already existing column that differs from the default, the user must use the parameter with the `.col` suffix. 
 
-If the Level 0 data does not already contain the required column, then the column can be populated with a single value. For example, `clint_L0` does not contain a column specifying biological replicates. Therefore, we populate the required column with `biological.replicates = 1`. In general, to specify a single value for an entire column, the user must use the parameter without the `.col` suffix. 
+If the Level 0 data does not already contain the required column, then the entire column can be populated with a single value. For example, `clint_L0` does not contain a column specifying biological replicates. Therefore, we populate the required column with `biological.replicates = 1`. In general, to specify a single value for an entire column, the user must use the parameter without the `.col` suffix. 
 
-Some columns must be present in the Level 0 data while others can be filled with a single value. At minimum, the following columns must be present in the Level 0 data and specified as single entry is not permitted: `sample.col`, `compound.col`, `lab.compound.col`, `type.col`, `istd.col`, `area.col`, and `note.col`. 
+Users should be mindful if they choose to specify a single value for all of their samples and verify that that is the action they wish to take. 
 
-The rest of the following columns may either be specified from the Level 0 data or filled with a single value: `density.col` or `density`, `cal.col` or `cal`, `istd.conc.col` or `istd.conc`, `test.conc.col` or `test.conc`, `clint.assay.conc.col` or `clint.assay.conc`, `analysis.method.col` or `analysis.method`, `analysis.instrument.col` or `analysis.instrument`, `analysis.parameters.col` or `analysis.parameters`, and `biological.replicates.col` or `biological.replicates`.  
+Some columns must be present in the Level 0 data while others can be filled with a single value. At minimum, the following columns must be present in the Level 0 data and specified as single entry is not permitted: `sample.col`, `compound.col`, `dtxsid.col`, `lab.compound.col`, `type.col`, `istd.col`, `area.col`, and `note.col`. 
+
+The rest of the following columns may either be specified from the Level 0 data or filled with a single value: `date.col` or `date`, `density.col` or `density`, `cal.col` or `cal`, `dilution.col` or `dilution`, `time.col` or `time`, `istd.name.col` or `istd.name`, `istd.conc.col` or `istd.conc`, `test.conc.col` or `test.conc`, `clint.assay.conc.col` or `clint.assay.conc`, `biological.replicates.col` or `biological.replicates`, `analysis.method.col` or `analysis.method`, `analysis.instrument.col` or `analysis.instrument`, `analysis.parameters.col` or `analysis.parameters`, `level0.file.col` or `level0.file`, and `level0.sheet.col` or `level0.sheet`. 
+
+```{r required cols, echo = FALSE}
+# Create table of required parameters for Level 1 
+
+req_cols = data.frame(matrix(nrow = 31, ncol = 4))
+vars <- c("Parameter", "Required in L0?", "Corresp. single-entry Parameter", "Descr.")
+colnames(req_cols) <- vars
+
+# Parameter names 
+parameters <- c("FILENAME", "data.in", "sample.col", "date.col", "compound.col",
+                "dtxsid.col", "lab.compound.col", "type.col", "density.col", 
+                "cal.col", "dilution.col", "time.col", "istd.col", "istd.name.col", 
+                "istd.conc.col", "test.conc.col", "clint.assay.conc.col",
+                "area.col", "biological.replicates.col", "technical.replicates.col",
+                "analysis.method.col", "analysis.instrument.col",
+                "analysis.parameters.col", "note.col", "level0.file.col", 
+                "level0.sheet.col", "output.res", "save.bad.types", "sig.figs", "INPUT.DIR",
+                "OUTPUT.DIR")
+req_cols[,"Parameter"] <- parameters
+
+# Parameter required in L0?
+req_cols <- req_cols %>% 
+  mutate("Required in L0?" = case_when(
+    Parameter %in% c("sample.col","compound.col", "dtxsid.col", "lab.compound.col", "type.col", "istd.col", "area.col", "note.col") ~ "Y",
+    Parameter %in% c("FILENAME", "data.in", "output.res", "save.bad.types", "sig.figs", "INPUT.DIR", "OUTPUT.DIR") ~ "N/A", 
+    .default = "N"
+  ))
+
+# Corresponding single-entry parameter 
+req_cols <- req_cols %>% 
+  mutate("Corresp. single-entry Parameter" = ifelse(.data[[vars[[2]]]] == "N", gsub(".col","",Parameter),
+                NA))
+
+# Brief description 
+description <- c("Output and/or input filename", 
+                 "Level 0 data frame", 
+                 "Lab sample name",
+                 "Lab measurement date",
+                 "Formal test compound name",
+                 "EPA's DSSTox Structure ID",
+                 "Lab test compound name (abbr.)",
+                 "Sample type (Blank/Cvst/Inactive/CC)",
+                 "Hepatocyte density in the in vitro incubation",
+                 "MS calibration",
+                 "Number of times sample was diluted",
+                 "Time since chemical was introduced",
+                 "Internal standard peak area",
+                 "Internal standard name", 
+                 "Internal standard concentration",
+                 "Standard test chemical concentration",
+                 "Initial chemical concentration",
+                 "Target analyte peak area",
+                 "Replicates with the same analyte", 
+                 "Repeated measurements from one sample", 
+                 "Analytical chemistry analysis method",
+                 "Analytical chemistry analysis instrument",
+                 "Analytical chemistry analysis parameters", 
+                 "Additional notes", 
+                 "Raw data filename", 
+                 "Raw data sheet name", 
+                 "Export results (TSV)?",
+                 "Export bad data (TSV)?",
+                 "Number of sig figs",
+                 "Input directory of Level 0 file",
+                 "Export directory to save Level 1 files"
+                 )
+
+
+req_cols[,"Descr."] <- description
+```
+
+```{r, echo = FALSE, warning = FALSE}
+DT::datatable(req_cols,
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 2: Level 1 parameters'),
+    extensions = 'Scroller',
+    rownames = FALSE,
+    options = list(deferRender = TRUE,
+                   scroller = TRUE,
+                   scrollY = 200,
+                   dom = "t"
+                   ))
+```
+
+By default, a TSV file containing the Level 1 data is exported to the user's directory. We have omitted this export with `output.res = FALSE`. The option to omit exporting a TSV file is also available at Levels 2 and 3 and will be used from this point forward.
+
 ```{r L1 processing} 
 clint_L1_curated <- format_clint(FILENAME = "Clint_vignette", 
                          data.in = clint_L0,
@@ -75,27 +179,54 @@ clint_L1_curated <- format_clint(FILENAME = "Clint_vignette",
                          istd.conc = 0.01,
                          cal = 1,
                          biological.replicates = 1,
-                         # don't return output .tsv file
-                         output.res = FALSE
+                         # don't export output TSV file
+                         output.res = FALSE,
+                         save.bad.types = TRUE
                          )
 ```
 
-We receive a warning message that some of our samples have been removed due to inappropriate sample types. To view which sample types were removed, one can set the parameter `save.bad.types = TRUE` to export the data to a .tsv file. For this example, we will not save the discarded sample types. 
+We receive a warning message that some of our samples have been removed due to "inappropriate sample types". The removed samples include data that did not have one of the following sample types: Blank, Hepatocyte incubation concentration (Cvst), Inactivated Hepatocytes (Inactive), or Calibration Curve (CC). 
 
-Our Level 1 data is nicely formatted and contains all of the information we provided in `format_clint`. 
+The following table displays some of the samples that were removed. These samples are annotated with a "QC" sample type indicating "Quality Control" and should therefore not be included in our analysis.
+
 ```{r, echo = FALSE}
-head(clint_L1_curated, n = 3) %>% 
-  kable(caption = "Level 1 data") %>% 
-  scroll_box(width = "100%")
+clint_L0 %>% 
+  filter(Type == "QC") %>% 
+  head(n = 5) %>% 
+  DT::datatable(caption = htmltools::tags$caption(style = 'caption-side: top; text-align: left;', 'Table 3: Subset of removed samples'),
+                rownames = FALSE,
+                extensions = 'Scroller',
+                options = list(deferRender = TRUE,
+                               scrollX = TRUE, 
+                               dom = 't'))
+```
+
+To export the removed samples types as a TSV, the user can set the parameter `save.bad.types = TRUE`. For this example, we will not save the discarded sample types.  
+
+The following table displays the first three rows of `clint_L1_curated`, our Level 1 data produced from `format_clint`. In addition to the columns specified by the user, there is an additional column called `Response`. This column is the test compound concentration (when? at the end? at the beginning?) and is calculated as $\textrm{Response} = \frac{\textrm{Analyte Area}}{\textrm{ISTD Area}}*\textrm{ISTD Conc}$. 
+
+```{r, echo = FALSE, warning = FALSE}
+DT::datatable(head(clint_L1_curated, n = 3),
+              rownames = FALSE,
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 4: Level 1 data'),
+    extensions = 'Scroller',
+    options = list(deferRender = TRUE,
+                   scrollX = TRUE,
+                   dom = "t"
+                   ))
 ```
 
 ## Level 2 processing
 
-`sample_verification` is the Level 2 function used to add a verification column. The verification column indicates whether a sample should be included in the point estimation (Level 3) and credible interval (Level 4) processing. This column allows users to keep all samples in their data but only use a subset for their statistical analyses. All of the data in Level 2 is identical to the data in Level 1 with the exception of the additional `Verified` column. 
+`sample_verification` is the Level 2 function used to add a verification column. The verification column indicates whether a sample should be included in the point estimation (Level 3) and credible interval (Level 4) processing. This column allows users to keep all samples in their data but only utilize the reliable samples for Cl~int~ estimation. All of the data in Level 2 is identical to the data in Level 1 with the exception of the additional `Verified` column. 
 
-First, we need to define a data frame detailing which chemicals to exclude with the following columns: `Variables`, `Values`, and `Message.` The `Variables` column contains the variable names used to filter the excluded rows. In our example, we are using `Lab.Sample.Name` and `DTXSID` to identify the excluded rows separated by a "|". The `Values` column contains the values of the variables, as a character, also separated by a "|". The `Message` column contains the reason for exclusion. 
+To determine whether a sample should be included, the user should consult the wet-lab scientists from where their data originates. This level of processing allows the user to receive feedback from the wet-lab scientists, exclude erroneous or unreliable samples, and produce new Cl~int~ estimates. There is an open channel of communication between the user and the wet-lab scientists.
 
-In our example, we are using the already processed `clint_L2` data to determine which samples should be excluded.
+We will use the already processed Level 2 data frame, `clint_L2`, to regenerate our exclusion data. In general, the user would not have access to the exclusion information a priori. 
+
+The exclusion data frame must include the following columns: `Variables`, `Values`, and `Message`. The `Variables` column contains the variable names used to filter the excluded rows. Here, we are using `Lab.Sample.Name` and `DTXSID` to identify the excluded rows separated by a "|". The `Values` column contains the values of the variables, as a character, also separated by a "|". The `Message` column contains the reason for exclusion. Here, we are using the reasons listed in the `Verified` column in `clint_L2`.
+
 ```{r L2 processing exclusion}
 # Use verification data from loaded in `clint_L2` data frame
 exclusion <- clint_L2 %>% 
@@ -106,71 +237,128 @@ exclusion <- clint_L2 %>%
   select(Variables, Values, Message)
 ```
 
+```{r, echo = FALSE, warning = FALSE}
+DT::datatable(exclusion,
+              rownames = FALSE,
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 5: Exclusion data frame'),
+    extensions = 'Scroller',
+    options = list(deferRender = TRUE,
+                   scroller = TRUE,
+                   scrollY = 200,
+                   dom = "t"
+                   ))
+```
+
 ```{r L2 processing}
 clint_L2_curated <- sample_verification(FILENAME = "Clint_vignette",
                                      data.in = clint_L1_curated,
                                      assay = "Clint",
                                      exclusion.info = exclusion,
-                                     # don't return output .tsv file 
+                                     # don't export output TSV file 
                                      output.res = FALSE)
 ```
 
-By default, a .tsv file containing the Level 2 data is exported to the user's directory. We have omitted this export with `output.res = FALSE`. 
+Our Level 2 data now contains a `Verified` column. If the sample should be included, the column contains a "Y" for yes. If the sample should be excluded, the column contains the reason for exclusion. 
 
-Our Level 2 data now contains a `Verified` column. If the sample should be included, the column contains a "Y" for yes. 
-```{r, echo = FALSE}
-head(clint_L2_curated, n = 3) %>% 
-  kable(caption = "Included Level 2 data") %>% 
-  scroll_box(width = "100%")
+The following table displays some rows of the Level 2 data, each with a different value in the `Verification` column. Note, the reasons for exclusion are not limited to "Unknown Conc." or "Wrong Mix", they were merely provided as an example.
+
+```{r, echo = FALSE, warning = FALSE}
+df1 <- head(clint_L2_curated, n = 1)
+df2 <- head(filter(clint_L2_curated, Verified == "Wrong Mix"), n = 1)
+df3 <- head(filter(clint_L2_curated, Verified == "Unknown Conc."), n = 1)
+
+temp <- rbind(df1, df2)
+temp <- rbind(temp, df3)
 ```
 
-If not, the column contains the reason for exclusion such as "Unknown Conc." or "Wrong Mix" in our example. Note that the reasons for exclusion are not limited to these options, they were merely provided as an example. 
-```{r, echo = FALSE}
-head(filter(clint_L2_curated, Verified != "Y"), n = 3) %>% 
-  kable(caption = "Excluded Level 2 data") %>% 
-  scroll_box(width = "100%")
+
+```{r, echo = FALSE, warning = FALSE}
+DT::datatable(temp,
+              rownames = FALSE,
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 6: Level 2 data'),
+    extensions = 'Scroller',
+    options = list(deferRender = TRUE,
+                   scrollX = TRUE,
+                   dom = "t"
+                   ))
 ```
 
 ## Level 3 processing
 
-`calc_clint_point` is the Level 3 function used to calculate the cl~int~ point estimate using a Frequentist framework. Using the `mle` estimator function in the `stats4` package, we can estimate the cl~int~ values that maximize the log likelihood for each chemical.
+`calc_clint_point` is the Level 3 function used to calculate the Cl~int~ point estimate for each test compound using a Frequentist framework. 
+
+Mathematically, Cl~int~ is the slope of the line representing log concentrations over time. With some assumptions on the form of the line and on the distribution of the error terms, we can estimate Cl~int~ using maximum likelihood estimation.  
+
+First, we assume the test compound concentration at time $t$ is an exponential decay model $$C(t) = \textrm{cal}*C_0*e^{-mt}$$ where $\textrm{cal}$ is the MS calibration, $C_0$ is the test compound concentration at time 0, $m$ is the rate constant, and $t$ is the incubation time. Notice that if a natural log is applied, $$\textrm{ln}(C(t)) = -mt + \textrm{ln}(\textrm{cal}*C_0)$$ and $m$ is the slope of the line representing log concentrations over time. Thus, the rate constant $m$ is our Cl~int~ value. 
+
+Next, we also assume the random noise is normally distributed $\varepsilon_i \sim \mathcal{N}(0,\sigma^2)$ where $\sigma^2$ is unknown. 
+
+Lastly, the test compound concentration, our dependent variable, is qualitatively defined by our `Response` column, the ratio of the analyte area to the ISTD area. 
+
+With this information, we can rewrite our dependent variable as $$y_i \sim \mathcal{N}(C(t),\sigma^2)$$ After some simplification, our log-likelihood is defined as $$l(\theta) = N*log\left(\frac{1}{\sqrt{2\pi}\sigma}\right)-\frac{1}{2}\sum_{i=1}^N\frac{(y_i-C(\theta, t))^2}{2\sigma^2}$$ where $\theta = (\textrm{cal}, m)$ and $N$ is the number of Cvst and Blank samples. 
+
+Using the `mle` estimator in the `stats4` package, we then estimate the parameters that maximize the log-likelihood for each test compound. 
+
 ```{r L3 processing}
 clint_L3_curated <- calc_clint_point(FILENAME = "Clint_vignette",
                              data.in = clint_L2_curated,
-                             # don't return output .tsv file
+                             # don't export output TSV file
                              output.res = FALSE)
 ```
 
-By default, the cl~int~ point estimates are returned to the user both in the R session and in an exported .tsv file. We have again omitted exporting the .tsv file with `output.res = FALSE`. Our Level 3 data contains a cl~int~ estimate, p-value, AIC of the linear regression, and AIC of the linear regression assuming a constant rate of decay. 
+Our Level 3 data contains a `Clint` estimate, `Clint.pValue`, `AIC` of the exponential decay fit, and `AIC.Null` of the exponential decay assuming a constant rate of decay. 
+
+Some experiments also include the assay performed at 1 $\mu M$ and 10 $\mu M$ to check for the saturation of metabolizing enzymes. The test compound concentration at time $t$ with a saturation probability is assumed to follow an exponential decay model with a slight modification $$C_{sat}(t) = \textrm{cal}*C_0*e^{-m*\textrm{sat}*t}$$ where $\textrm{cal}$ is the MS calibration, $C_0$ is the test compound concentration at time 0, $m$ is the rate constant, $t$ is the incubation time, and $\textrm{sat}$ is the probability of saturation, or the probability of observing a lower clearance rate at a higher concentration. 
+
+If these samples are included, `Clint.1` is the clearance rate at 1 $\mu M$, `Clint.10` is the clearance rate at 10 $\mu M$, `AIC.Sat` is the AIC of the exponential decay with a saturation probability, and `Sat.pValue` is the corresponding p-value.
+
+Because our example data did not include these samples, `Clint.1`, `Clint.10`, `AIC.Sat`, and `Sat.pValue` are empty. 
+
 ```{r, echo = FALSE}
-# Returned data frame in R session
-head(clint_L3_curated, n = 3) %>% 
-  kable(caption = "Level 3 data") %>% 
-  scroll_box(width = "100%")
+DT::datatable(clint_L3_curated,
+              rownames = FALSE,
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 7: Level 3 data'),
+    extensions = 'Scroller',
+    options = list(deferRender = TRUE,
+                   scrollX = TRUE,
+                   dom = "t"
+                   ))
 ```
 
 ## Level 4 processing
 
-`calc_clint` is the Level 4 function used to calculate cl~int~ point estimates and credible intervals using a Bayesian framework. Markov chain Monte Carlo (MCMC) simulations are used to randomly sample from the posterior distribution with a uniform prior. 
+`calc_clint` is the Level 4 function used to calculate Cl~int~ point estimates and credible intervals using a Bayesian framework. Markov chain Monte Carlo (MCMC) simulations are used to randomly sample from the posterior distribution with a uniform prior. 
 
-To run Level 4, one needs to have JAGS installed on their machine. To determine the correct path, the user must run
-```{r}
-runjags::findjags()
-```
-
-and include the path up through "/x64". 
+To run Level 4, one needs to have JAGS installed on their machine. To determine the correct path, the user must use `runjags::findjags()` as their argument for the `JAGS.PATH` parameter. 
 
 We pass `clint_L2_curated`, the Level 2 data frame, and **not** `clint_L3_curated`, the Level 3 data frame, into `calc_clint`. This is because Level 3 and Level 4 processing are not sequential; they are methods that calculate different statistical quantities. 
+
 ```{r L4 Processing, message= FALSE}
+
 clint_L4_curated <- calc_clint(FILENAME = "Clint_vignette",
                        data.in = clint_L2_curated, 
-                       JAGS.PATH = "C:/Program Files/JAGS/JAGS-4.3.1/x64"
+                       JAGS.PATH = runjags::findjags()
                        )
 ```
-The cl~int~ intervals are returned to the user's R session, in an exported .tsv file, and in an exported .RData file. There is no parameter to prevent the .tsv or .RData files from being exported because of the potential for the simulations to crash. Our Level 4 data contains a cl~int~ credible interval and the corresponding p-value for each chemical.
-```{r, echo = FALSE}
-# Returned data frame in R session 
-head(clint_L4_curated[["Results"]], n = 3) %>% 
-  kable(caption = "Level 4 Data") %>% 
-  scroll_box(width = "100%")
+
+The Cl~int~ intervals are returned to the user's R session, in an exported TSV file, and in an exported .RData file. There is no parameter to prevent the TSV or RData files from being exported because of the potential for the simulations to crash. Our Level 4 data contains a Cl~int~ credible interval and the corresponding p-value for each chemical.
+
+```{r}
+DT::datatable(clint_L4_curated[["Results"]],
+              rownames = FALSE,
+              caption = htmltools::tags$caption( style = 'caption-side: top; text-align: left;',
+    'Table 8: Level 4 data'),
+    extensions = 'Scroller',
+    options = list(deferRender = TRUE,
+                   scrollX = TRUE,
+                   dom = "t"
+                   ))
 ```
+
+
+## Best Practices: Food for thought 
+
+Generally, data processing pipelines should include minimal to no manual coding. It is best to keep clean code that is easily reproducible and transferable. The user should aim to have all the required data and meta-data files properly formatted to avoid further modifications throughout the pipeline. 
